--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -104,44 +104,50 @@ header, footer, article, nav, div {
     display: flex;
     flex-direction: column;
     position: relative;
+    opacity: 1;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 30px;
+        left: 10px;
+        width: 100px;
+        height: 100px;
+        background-image: url("../img/01.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &__item {
+        width: 100%;
+        margin: 0 0 16px;
+        color: black;
+        font-family: 'Lato', sans-serif;
+        transition: 0.3s linear;
+        cursor: pointer;
+
+        &:hover,
+        &:focus {
+            color: lightblue;
+        }
+    }
 }
 
-.menu::before {
-    content: "";
-    position: absolute;
-    top: 30px;
-    left: 10px;
-    width: 100px;
-    height: 100px;
-    background-image: url("../img/01.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+.content {
 
-.menu__item {
-    width: 100%;
-    margin: 0 0 16px;
-    color: black;
-    font-family: 'Lato', sans-serif;
-    transition: 0.3s linear;
-    cursor: pointer;
-}
+    &__btn {
+        width: 300px;
+        padding: 10px 16px;
+        border-radius: 10px;
+        border: 2px solid lightblue;
+        cursor: pointer;
+        transition: 0.3s linear;
 
-.menu__item:hover {
-    color: lightblue;
-}
-
-.content__btn {
-    width: 300px;
-    padding: 10px 16px;
-    border-radius: 10px;
-    border: 2px solid lightblue;
-    cursor: pointer;
-    transition: 0.3s linear;
-}
-
-.content__btn:hover {
-    background: lightblue;
-    color: black;
+        &:hover,
+        &:focus {
+            background: lightblue;
+            color: black;
+        }
+    }
 }
